--- a/css/style.css
+++ b/css/style.css
@@ -420,9 +420,10 @@ form {
     
 }
 
+
 .activities-cards .card-content {
     width: 100%;
-    padding-top: 20px;
+    padding-top: 15px;
     padding-left: 15px;
     display: flex;
     box-sizing: border-box;
@@ -440,21 +441,35 @@ form {
 
 
 footer {
-    width: auto;
+    width: 100%;
     background: #F2F2F2;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 25px 40px 0;
-    padding: 20px;
-    
-    
-    
+    justify-content: center;
+    align-items: center;  
 }
 
+.footer-blocs {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1440px;
+    padding-left: 35px;
+}
+
+.footer-bloc {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    margin-right: 0px;
+    display: flex;
+    flex-direction: column;
+  }
+
+ 
+
 footer h3 {
-    padding-bottom: 15px;
-    padding-right: 0px;
+    margin-bottom: 15px;
+    
 }
 
 footer li {
@@ -526,6 +541,11 @@ footer ul {
     .activities-cards img {
         width: 100%;
         height: 200px;
+
+    }
+
+    .activities-cards .card-content {
+        padding-top: 15px;
     }
 
     .filter button {
@@ -540,17 +560,25 @@ footer ul {
 
     }
 
+    .footer-blocs {
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        padding: 15px;
+        
+    }
+
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-   
-
     
     header {
         display: flex;
         flex-direction: column;
-        padding-left: 50px;
+        padding-left: 0px;
+        padding-right: 0;
+        
     }
 
     
@@ -561,22 +589,20 @@ footer ul {
         display: flex;
         flex-direction: row;
         justify-content: center;
+        align-items: center;
         border-bottom: 2px solid #F2F2F2;
         padding-bottom: 15px;
-        
-       
-        
-        
+    
     }
 
-    header {
-        margin: 0 -80px ;
-    }
-
+    
 
     nav  {
         width: 100%; 
         display: flex;
+        padding-left: 0;
+        padding-right: 0;
+       
         
     }
 
@@ -669,16 +695,17 @@ footer ul {
         width: 100%;
         display: flex;
         flex-direction: column-reverse;
-        
+    
     }
 
     .hebergements-and-populaires section {
         border-radius: 0;
+        
     }
 
     .populaires {
-        width:calc(100% + 99px);
-        padding: 0;
+        width:calc(100% + 90px);
+        padding-right: 40px;
         
         
     }
@@ -689,12 +716,19 @@ footer ul {
         width: 80%;
         display: flex;
         flex-direction: column;
+        align-content:  center;
+        margin-right:0%;
+        
         
     }
 
     .populaires-cards .card {
-        width: 100%;
+        width: 70%;
+        margin-right: 0;
+        padding-right: 40px;
     }
+
+    .populaires-cards .card-content
 
     .hebergements {
         margin-top: 50px;
@@ -738,16 +772,13 @@ footer ul {
         width: 100%;
     }
 
-    footer {
+    .footer-blocs {
         width: 100%;
         display: flex;
         flex-direction: column;
         margin: auto;
     }
 
-    footer ul {
-        padding-top: 25px;
-        padding-left: 25px;
-    }
+    
     
 }
