--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /****** General ***********/
-* {
+*{
     font-family: 'Raleway', sans-serif;
     list-style: none;
     margin: 0;
@@ -112,7 +112,6 @@ header {
 
 nav a {
     margin-left: 30px;
-    transition: 0,3s ease;
     color: black;
     
 }
@@ -382,12 +381,9 @@ form {
 }
 
 .activities h2 {
-    padding: 55px 40px 5px;
+    padding: 55px 15px 5px;
 }
 
-#activities-title {
-    padding-left: 12px;
-}
 
 .activities-cards {
     margin: auto;
@@ -534,7 +530,7 @@ footer ul {
     .activities-cards .card {
         width: 25%;
         height: 250px;
-        font-size: 400;
+        
     }
 
     .activities-cards img {
@@ -720,7 +716,7 @@ footer ul {
     }
 
     .populaires {
-        width:100%
+        width:100%;
         padding-right: 40px;
         
         
@@ -744,7 +740,6 @@ footer ul {
         padding-right: 40px;
     }
 
-    .
 
     .hebergements {
         margin-top: 50px;
@@ -755,7 +750,7 @@ footer ul {
     }
 
     .hebergements-cards .card {
-        width: 90%;
+        width: 100%;
         height: 240px;
         margin-right: 0;
 
@@ -773,7 +768,10 @@ footer ul {
     }
 
 
-
+    #activities-title {
+        padding-left: 50px;
+        padding-bottom: 20px;
+    }
 
 
     .activities-cards {
